Pass tastcat test

--- a/taskcat_outputs/index.html
+++ b/taskcat_outputs/index.html
@@ -212,7 +212,7 @@ td.text-right {
                             Documentation: http://taskcat.io
                             <br />
                         </a>
-                        Tested on: Friday - Aug,13,2021 @ 15:00:14
+                        Tested on: Friday - Aug,13,2021 @ 18:26:33
                     </td>
                     <td class=taskcat-logo>
                         <h3>
@@ -257,13 +257,13 @@ td.text-right {
                         us-east-1
                     </td>
                     <td class=text-left>
-                        tCaT-qs-workshop-default-c6c3af15e3b04de4a009166511525bd7
+                        tCaT-qs-workshop-default-b3f6a35fff8a4aff95bb80145d155055
                     </td>
-                    <td class=test-red>
-                        CREATE_FAILED
+                    <td class=test-green>
+                        CREATE_COMPLETE
                     </td>
                     <td class=text-left>
-                        <a href="tCaT-qs-workshop-default-c6c3af15e3b04de4a009166511525bd7-us-east-1-cfnlogs.txt">
+                        <a href="tCaT-qs-workshop-default-b3f6a35fff8a4aff95bb80145d155055-us-east-1-cfnlogs.txt">
                             View Logs 
                         </a>
                     </td>
